# src/routes/api/user/user.route.js
@@ -1,11 +1,28 @@
 'use strict'
 
-const express = require('express')
-const router = express.Router()
+const express = require('express');
+const multer  = require('multer');
+const path = require('path');
+const router = express.Router();
+var storage = multer.diskStorage({
+    destination: function (req, file, cb) {
+      cb(null, path.join(__dirname, '../../../public/uploads'))      //you tell where to upload the files,
+    },
+    filename: function (req, file, cb) {
+      cb(null, file.fieldname + '-' + Date.now() + '.png')
+    }
+  })
+  
+  var upload = multer({storage: storage,
+      onFileUploadStart: function (file) {
+        console.log(file.originalname + ' is starting ...')
+      },
+  });
 const userController = require('../../../controllers/user.controller');
 
 const auth = require('../../../middlewares/authorization')
 
+router.put('/:id', auth() ,userController.userExists, upload.single('file'), userController.editImg);
 router.get('/:badge', auth(), userController.findByBadge);
 router.put('/:badge', auth(['admin']), userController.edit);
 router.delete('/:badge', auth(['admin']), userController.delete);
